--- a/project_git/ShogiGame/incomplete_COU/janggi_x_alphazero.ipynb
+++ b/project_git/ShogiGame/incomplete_COU/janggi_x_alphazero.ipynb
@@ -143,7 +143,7 @@
       "source": [
         "# 말의 이동 도착 위치 및 이동 시작 위치를 행동으로 변환                                                                        \n",
         "def position_to_action(self, position, direction):\n",
-        "  return position * 50 + direction"
+        "  return position * 58 + direction"
       ],
       "metadata": {
         "id": "aWMndOBBYEQA"
@@ -156,7 +156,7 @@
       "source": [
         "# 행동을 말의 이동 도착 위치 및 이동 시작 위치로 변환\n",
         "def action_to_position(self, action):\n",
-        "    return (int(action / 50), action % 50)"
+        "    return (int(action / 58), action % 58)"
       ],
       "metadata": {
         "id": "Xrfap_MRYa-w"
@@ -190,11 +190,12 @@
         "  piece_type = self.pieces[position_src]\n",
         "  if piece_type == 1: # 차\n",
         "    directions = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-        "                  18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]\n",
+        "                  18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+        "                  50, 51, 52, 53, 54, 55, 56, 57]\n",
         "    return illegal_actions(directions, position_src)\n",
         "  \n",
         "  elif piece_type == 2: #졸\n",
-        "    directions = [0, 9, 26] \n",
+        "    directions = [0, 9, 26, 50, 56] \n",
         "    return illegal_actions(directions, position_src)\n",
         "  \n",
         "  elif piece_type == 3: #마\n",
@@ -203,7 +204,8 @@
         "  \n",
         "  elif piece_type == 4: #포\n",
         "    directions = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17,\n",
-        "              18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]\n",
+        "              18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33,\n",
+        "              51, 53, 55, 57]\n",
         "    return illegal_actions(directions, position_src)\n",
         "  \n",
         "  elif piece_type == 5: #사\n",
@@ -294,12 +296,42 @@
         "              break\n",
         "            else:\n",
         "              actions.append(self.position_to_action(p, direction))\n",
+        "        # 궁성안에 기물이 있을 때 대각선 행동 추가\n",
+        "        if dxy[direction][1] != 0 and dxy[direction][0] != 0:\n",
+        "          if position_src == 68 or position_src == 5:\n",
+        "            if (dxy[direction][1] == -1 and dxy[direction][0] == 1) or (dxy[direction][1] == -2 and dxy[direction][0] == 2):\n",
+        "              actions.append(self.position_to_action(p, direction))\n",
+        "          if position_src == 86 or position_src == 23:\n",
+        "            if (dxy[direction][1] == -1 and dxy[direction][0] == -1) or (dxy[direction][1] == -2 and dxy[direction][0] == -2):\n",
+        "              actions.append(self.position_to_action(p, direction))\n",
+        "          if position_src == 84 or position_src == 21:\n",
+        "            if (dxy[direction][1] == 1 and dxy[direction][0] == -1) or (dxy[direction][1] == 2 and dxy[direction][0] == -2):\n",
+        "              actions.append(self.position_to_action(p, direction))\n",
+        "          if position_src == 66 or position_src == 3:\n",
+        "            if (dxy[direction][1] == 1 and dxy[direction][0] == 1) or (dxy[direction][1] == 2 and dxy[direction][0] == 2):\n",
+        "              actions.append(self.position_to_action(p, direction))\n",
+        "          if position_src == 76 or position_src == 13:\n",
+        "            if (dxy[direction][1] == 1 and dxy[direction][0] == -1) or (dxy[direction][1] == 1 and dxy[direction][0] == 1) or (dxy[direction][1] == -1 and dxy[direction][0] == 1) or (dxy[direction][1] == -1 and dxy[direction][0] == -1):\n",
+        "              actions.append(self.position_to_action(p, direction))\n",
         "\n",
-        "        \n",
-        "      \n",
+        "\n",
         "      # 졸\n",
         "      elif self.pieces[position_src] == 2:\n",
         "        actions.append(self.position_to_action(p, direction))\n",
+        "      # 궁성안에 기물이 있을 때 대각선 행동 추가\n",
+        "      if dxy[direction][1] != 0 and dxy[direction][0] != 0:\n",
+        "        if position_src == 23:\n",
+        "          if (dxy[direction][1] == -1 and dxy[direction][0] == -1):\n",
+        "            actions.append(self.position_to_action(p, direction))\n",
+        "        if position_src == 21:\n",
+        "          if (dxy[direction][1] == 1 and dxy[direction][0] == -1):\n",
+        "            actions.append(self.position_to_action(p, direction))\n",
+        "        if position_src == 66 or position_src == 3:\n",
+        "          if (dxy[direction][1] == 1 and dxy[direction][0] == 1) or (dxy[direction][1] == 2 and dxy[direction][0] == 2):\n",
+        "            actions.append(self.position_to_action(p, direction))\n",
+        "        if position_src == 13:\n",
+        "          if (dxy[direction][1] == 1 and dxy[direction][0] == -1) or (dxy[direction][1] == -1 and dxy[direction][0] == -1):\n",
+        "            actions.append(self.position_to_action(p, direction))\n",
         "      \n",
         "      # 마\n",
         "      elif self.pieces[position_src] == 3:\n",
@@ -361,7 +393,7 @@
         "            is_po = False \n",
         "            for path in range(-1, dxy[direction][0], -1): \n",
         "              if self.pieces[bef_x + (bef_y + path) * 9] != 0 or self.enemy_pieces[89 - bef_x + (bef_y + path) * 9] != 0: # 경로 중 뛰어 넘어 갈 기물이 있다면\n",
-        "                if self.pieces[(bef_x + (bef_y + path) * 9 != 4 and self.enemy_pieces[89 - bef_x + (bef_y + path) * 9] != 4: # 그 기물이 나 혹은 상대의 포가 아니라면\n",
+        "                if self.pieces[(bef_x + (bef_y + path) * 9] != 4 and self.enemy_pieces[89 - bef_x + (bef_y + path) * 9] != 4: # 그 기물이 나 혹은 상대의 포가 아니라면\n",
         "                  is_po = path + -1\n",
         "                  break\n",
         "            if is_po:\n",
@@ -389,7 +421,47 @@
         "                  break\n",
         "                else:\n",
         "                  actions.append(self.position_to_action(p, direction)) # 둘다 아닐 경우 행동추가\n",
+        "        # 궁성안에 기물이 있을 때 대각선 행동 추가\n",
+        "        if dxy[direction][1] != 0 and dxy[direction][0] != 0:\n",
         "\n",
+        "            if position_src == 68: # 내 궁성에 있을 때\n",
+        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]: # 궁성 가운데 포를 제외한 기물이 있다면\n",
+        "                if (dxy[direction][1] == -2 and dxy[direction][0] == 2):\n",
+        "                  actions.append(self.position_to_action(p, direction))\n",
+        "            if position_src == 5: # 상대방 궁성에 있을 때\n",
+        "              if pieces[13] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 13] == [1, 2, 3, 5, 6, 7]:\n",
+        "                if (dxy[direction][1] == -2 and dxy[direction][0] == 2):\n",
+        "                  actions.append(self.position_to_action(p, direction))\n",
+        "\n",
+        "            if position_src == 86:\n",
+        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "                if (dxy[direction][1] == -2 and dxy[direction][0] == -2):\n",
+        "                  actions.append(self.position_to_action(p, direction))\n",
+        "            if position_src == 23:\n",
+        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "                if (dxy[direction][1] == -2 and dxy[direction][0] == -2):\n",
+        "                  actions.append(self.position_to_action(p, direction))\n",
+        "\n",
+        "\n",
+        "            if position_src == 84:\n",
+        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "                if (dxy[direction][1] == 2 and dxy[direction][0] == -2):\n",
+        "                  actions.append(self.position_to_action(p, direction))\n",
+        "            if position_src == 21:\n",
+        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "                if (dxy[direction][1] == 2 and dxy[direction][0] == -2):\n",
+        "                  actions.append(self.position_to_action(p, direction))\n",
+        "\n",
+        "\n",
+        "            if position_src == 66:\n",
+        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "                if (dxy[direction][1] == 2 and dxy[direction][0] == 2):\n",
+        "                  actions.append(self.position_to_action(p, direction))\n",
+        "            if position_src == 3:\n",
+        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "                if (dxy[direction][1] == 2 and dxy[direction][0] == 2):\n",
+        "                  actions.append(self.position_to_action(p, direction))\n",
+        "          \n",
         "      # 사\n",
         "      elif self.pieces[position_src] == 5:\n",
         "        if 3 <= x and x <= 5 and 7 <= y and y <= 9: # 이동후의 위치가 궁성을 벗어나지 않는 다면\n",
@@ -445,8 +517,30 @@
     },
     {
       "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3Qpo_24RIGTI",
+        "outputId": "3c3dec87-4c47-4aa3-9acf-8937d3495173"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
-        "def add_actions(self):"
+        "def add_actions(self, diresction, bef_x, bef_y, x, y):\n",
+        "  if direction "
       ],
       "metadata": {
         "id": "9558wXCKZIht"
@@ -653,9 +747,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# a =[]\n",
+        "# a_test = a.append\n",
+        "# a_test((1,2))\n",
+        "# a"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zPo-jl6aW5mF",
+        "outputId": "7968e50a-0c9c-4443-f93d-0861880d5637"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(1, 2)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "zPo-jl6aW5mF"
+        "id": "-fbx-3Slx3uf"
       },
       "execution_count": null,
       "outputs": []
