--- a/project_git/ShogiGame/incomplete_COU/janggi_x_alphazero.ipynb
+++ b/project_git/ShogiGame/incomplete_COU/janggi_x_alphazero.ipynb
@@ -38,44 +38,6 @@
     {
       "cell_type": "code",
       "source": [
-        "# 게임 상태\n",
-        "class State:\n",
-        "  # 초기 변수세팅\n",
-        "  def __init__(self,form, enemy_form, pieces=None, enemy_pieces=None, depth=0):\n",
-        "    self.pieces = pieces if pieces != None else  123421431414\n",
-        "    # [0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 1,0,1,0,1,0,1,0,1,\n",
-        "    # 0,5,0,0,0,0,0,5,0,\n",
-        "    # 0,0,0,0,7,0,0,0,0,\n",
-        "    # 6,0,0,2,0,2,0,0,6]\n",
-        "      \n",
-        "    self.enemy_pieces = enemy_pieces if enemy_pieces != None else 1341341341341234\n",
-        "    # [0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 0,0,0,0,0,0,0,0,0,\n",
-        "    # 1,0,1,0,1,0,1,0,1,\n",
-        "    # 0,5,0,0,0,0,0,5,0,\n",
-        "    # 0,0,0,0,7,0,0,0,0,\n",
-        "    # 6,0,0,2,0,2,0,0,6]\n",
-        "   \n"
-      ],
-      "metadata": {
-        "id": "TG0lVw9n0bou"
-      },
-      "execution_count": 42,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "# for i in range(90):\n",
         "#   if i < 9:\n",
         "#     print(i, ' ', end ='')\n",
@@ -135,7 +97,7 @@
       "metadata": {
         "id": "shRQ36u3t9ee"
       },
-      "execution_count": 43,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -148,7 +110,7 @@
       "metadata": {
         "id": "aWMndOBBYEQA"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -161,7 +123,7 @@
       "metadata": {
         "id": "Xrfap_MRYa-w"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -178,7 +140,7 @@
       "metadata": {
         "id": "j3haQCTChxim"
       },
-      "execution_count": 70,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -223,7 +185,7 @@
       "metadata": {
         "id": "17PG1aDIj_xu"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -296,6 +258,7 @@
         "              break\n",
         "            else:\n",
         "              actions.append(self.position_to_action(p, direction))\n",
+        "\n",
         "        # 궁성안에 기물이 있을 때 대각선 행동 추가\n",
         "        if dxy[direction][1] != 0 and dxy[direction][0] != 0:\n",
         "          if position_src == 68 or position_src == 5:\n",
@@ -318,6 +281,7 @@
         "      # 졸\n",
         "      elif self.pieces[position_src] == 2:\n",
         "        actions.append(self.position_to_action(p, direction))\n",
+        "\n",
         "      # 궁성안에 기물이 있을 때 대각선 행동 추가\n",
         "      if dxy[direction][1] != 0 and dxy[direction][0] != 0:\n",
         "        if position_src == 23:\n",
@@ -393,7 +357,7 @@
         "            is_po = False \n",
         "            for path in range(-1, dxy[direction][0], -1): \n",
         "              if self.pieces[bef_x + (bef_y + path) * 9] != 0 or self.enemy_pieces[89 - bef_x + (bef_y + path) * 9] != 0: # 경로 중 뛰어 넘어 갈 기물이 있다면\n",
-        "                if self.pieces[(bef_x + (bef_y + path) * 9] != 4 and self.enemy_pieces[89 - bef_x + (bef_y + path) * 9] != 4: # 그 기물이 나 혹은 상대의 포가 아니라면\n",
+        "                if self.pieces[bef_x + (bef_y + path) * 9] != 4 and self.enemy_pieces[89 - bef_x + (bef_y + path) * 9] != 4: # 그 기물이 나 혹은 상대의 포가 아니라면\n",
         "                  is_po = path + -1\n",
         "                  break\n",
         "            if is_po:\n",
@@ -421,6 +385,7 @@
         "                  break\n",
         "                else:\n",
         "                  actions.append(self.position_to_action(p, direction)) # 둘다 아닐 경우 행동추가\n",
+        "\n",
         "        # 궁성안에 기물이 있을 때 대각선 행동 추가\n",
         "        if dxy[direction][1] != 0 and dxy[direction][0] != 0:\n",
         "\n",
@@ -465,7 +430,7 @@
         "      # 사\n",
         "      elif self.pieces[position_src] == 5:\n",
         "        if 3 <= x and x <= 5 and 7 <= y and y <= 9: # 이동후의 위치가 궁성을 벗어나지 않는 다면\n",
-        "          actions.append(self.position_to_action(p, direction)\n",
+        "          actions.append(self.position_to_action(p, direction))\n",
         "            \n",
         "      # 상 \n",
         "      elif self.pieces[position_src] == 6:\n",
@@ -505,47 +470,14 @@
         "    # 왕\n",
         "      elif self.pieces[position_src] == 2:\n",
         "        if 3 <= x and x <= 5 and 7 <= y and y <= 9: # 이동후의 위치가 궁성을 벗어나지 않는 다면\n",
-        "          actions.append(self.position_to_action(p, direction)\n",
+        "          actions.append(self.position_to_action(p, direction))\n",
         "  return actions\n",
         "\n"
       ],
       "metadata": {
         "id": "qnoxIFYP0Uva"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3Qpo_24RIGTI",
-        "outputId": "3c3dec87-4c47-4aa3-9acf-8937d3495173"
-      },
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "a\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def add_actions(self, diresction, bef_x, bef_y, x, y):\n",
-        "  if direction "
-      ],
-      "metadata": {
-        "id": "9558wXCKZIht"
-      },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
