--- a/project_git/ShogiGame/incomplete_COU/janggi_x_alphazero.ipynb
+++ b/project_git/ShogiGame/incomplete_COU/janggi_x_alphazero.ipynb
@@ -26,7 +26,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {
         "id": "jBBxhG4lYjHS"
       },
@@ -47,40 +47,48 @@
         "#     print(i,'', end ='')"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "xskdggii9KR2",
-        "outputId": "aa122bbc-5ad8-4f48-f708-c78d84a09f8e"
+        "id": "xskdggii9KR2"
       },
-      "execution_count": 23,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0  1  2  3  4  5  6  7  8  \n",
-            "\n",
-            "9 10 11 12 13 14 15 16 17 \n",
-            "\n",
-            "18 19 20 21 22 23 24 25 26 \n",
-            "\n",
-            "27 28 29 30 31 32 33 34 35 \n",
-            "\n",
-            "36 37 38 39 40 41 42 43 44 \n",
-            "\n",
-            "45 46 47 48 49 50 51 52 53 \n",
-            "\n",
-            "54 55 56 57 58 59 60 61 62 \n",
-            "\n",
-            "63 64 65 66 67 68 69 70 71 \n",
-            "\n",
-            "72 73 74 75 76 77 78 79 80 \n",
-            "\n",
-            "81 82 83 84 85 86 87 88 89 "
-          ]
-        }
-      ]
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# # 게임 상태\n",
+        "# class State:\n",
+        "#   # 초기 변수세팅\n",
+        "#   def init(self,form, enemy_form, pieces=None, enemy_pieces=None, depth=0):\n",
+        "#     pos =[0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     1,0,1,0,1,0,1,0,1,\n",
+        "#     0,5,0,0,0,0,0,5,0,\n",
+        "#     0,0,0,0,7,0,0,0,0,\n",
+        "#     6,0,0,2,0,2,0,0,6]\n",
+        "#     self.pieces = pieces if pieces != None else pos\n",
+        "\n",
+        "#     enemy_pos = [0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     0,0,0,0,0,0,0,0,0,\n",
+        "#     1,0,1,0,1,0,1,0,1,\n",
+        "#     0,5,0,0,0,0,0,5,0,\n",
+        "#     0,0,0,0,7,0,0,0,0,\n",
+        "#     6,0,0,2,0,2,0,0,6]\n",
+        "#     self.enemy_pieces = enemy_pieces if enemy_pieces != None else enemy_form\n",
+        "    "
+      ],
+      "metadata": {
+        "id": "6cKbpuWtQnvP"
+      },
+      "execution_count": 36,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -97,7 +105,7 @@
       "metadata": {
         "id": "shRQ36u3t9ee"
       },
-      "execution_count": 14,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -110,7 +118,7 @@
       "metadata": {
         "id": "aWMndOBBYEQA"
       },
-      "execution_count": 15,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -123,7 +131,7 @@
       "metadata": {
         "id": "Xrfap_MRYa-w"
       },
-      "execution_count": 16,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -140,7 +148,7 @@
       "metadata": {
         "id": "j3haQCTChxim"
       },
-      "execution_count": 17,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -185,7 +193,7 @@
       "metadata": {
         "id": "17PG1aDIj_xu"
       },
-      "execution_count": 18,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -390,40 +398,40 @@
         "        if dxy[direction][1] != 0 and dxy[direction][0] != 0:\n",
         "\n",
         "            if position_src == 68: # 내 궁성에 있을 때\n",
-        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]: # 궁성 가운데 포를 제외한 기물이 있다면\n",
+        "              if self.pieces[76] == [1, 2, 3, 5, 6, 7] and self.enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]: # 궁성 가운데 포를 제외한 기물이 있다면\n",
         "                if (dxy[direction][1] == -2 and dxy[direction][0] == 2):\n",
         "                  actions.append(self.position_to_action(p, direction))\n",
         "            if position_src == 5: # 상대방 궁성에 있을 때\n",
-        "              if pieces[13] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 13] == [1, 2, 3, 5, 6, 7]:\n",
+        "              if self.pieces[13] == [1, 2, 3, 5, 6, 7] and self.enemy_pieces[89 - 13] == [1, 2, 3, 5, 6, 7]:\n",
         "                if (dxy[direction][1] == -2 and dxy[direction][0] == 2):\n",
         "                  actions.append(self.position_to_action(p, direction))\n",
         "\n",
         "            if position_src == 86:\n",
-        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "              if self.pieces[76] == [1, 2, 3, 5, 6, 7] and self.enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
         "                if (dxy[direction][1] == -2 and dxy[direction][0] == -2):\n",
         "                  actions.append(self.position_to_action(p, direction))\n",
         "            if position_src == 23:\n",
-        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "              if self.pieces[76] == [1, 2, 3, 5, 6, 7] and self.enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
         "                if (dxy[direction][1] == -2 and dxy[direction][0] == -2):\n",
         "                  actions.append(self.position_to_action(p, direction))\n",
         "\n",
         "\n",
         "            if position_src == 84:\n",
-        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "              if self.pieces[76] == [1, 2, 3, 5, 6, 7] and self.enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
         "                if (dxy[direction][1] == 2 and dxy[direction][0] == -2):\n",
         "                  actions.append(self.position_to_action(p, direction))\n",
         "            if position_src == 21:\n",
-        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "              if self.pieces[76] == [1, 2, 3, 5, 6, 7] and self.enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
         "                if (dxy[direction][1] == 2 and dxy[direction][0] == -2):\n",
         "                  actions.append(self.position_to_action(p, direction))\n",
         "\n",
         "\n",
         "            if position_src == 66:\n",
-        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "              if self.pieces[76] == [1, 2, 3, 5, 6, 7] and self.enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
         "                if (dxy[direction][1] == 2 and dxy[direction][0] == 2):\n",
         "                  actions.append(self.position_to_action(p, direction))\n",
         "            if position_src == 3:\n",
-        "              if pieces[76] == [1, 2, 3, 5, 6, 7] and enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
+        "              if self.pieces[76] == [1, 2, 3, 5, 6, 7] and self.enemy_pieces[89 - 76] == [1, 2, 3, 5, 6, 7]:\n",
         "                if (dxy[direction][1] == 2 and dxy[direction][0] == 2):\n",
         "                  actions.append(self.position_to_action(p, direction))\n",
         "          \n",
@@ -477,7 +485,7 @@
       "metadata": {
         "id": "qnoxIFYP0Uva"
       },
-      "execution_count": 19,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -491,7 +499,7 @@
       "metadata": {
         "id": "j9Hh-xH3NSeo"
       },
-      "execution_count": 37,
+      "execution_count": 35,
       "outputs": []
     },
     {
