--- a/project_git/ShogiGame/incomplete_COU/janggi_x_alphazero.ipynb
+++ b/project_git/ShogiGame/incomplete_COU/janggi_x_alphazero.ipynb
@@ -1,28 +1,13 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "#Game"
-      ],
       "metadata": {
         "id": "neuFL5p30c1s"
-      }
+      },
+      "source": [
+        "#Game"
+      ]
     },
     {
       "cell_type": "code",
@@ -37,6 +22,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {
+        "id": "xskdggii9KR2"
+      },
+      "outputs": [],
       "source": [
         "# for i in range(90):\n",
         "#   if i < 9:\n",
@@ -45,15 +35,15 @@
         "#     print('\\n')  \n",
         "#   if i >= 9:\n",
         "#     print(i,'', end ='')"
-      ],
-      "metadata": {
-        "id": "xskdggii9KR2"
-      },
-      "execution_count": 21,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {
+        "id": "6cKbpuWtQnvP"
+      },
+      "outputs": [],
       "source": [
         "# # 게임 상태\n",
         "# class State:\n",
@@ -83,15 +73,15 @@
         "#     6,0,0,2,0,2,0,0,6]\n",
         "#     self.enemy_pieces = enemy_pieces if enemy_pieces != None else enemy_form\n",
         "    "
-      ],
-      "metadata": {
-        "id": "6cKbpuWtQnvP"
-      },
-      "execution_count": 36,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {
+        "id": "shRQ36u3t9ee"
+      },
+      "outputs": [],
       "source": [
         "# 순서 -> 상우하좌                                                                         #인덱스\n",
         "dxy = [[0, -1], [0, -2], [0, -3], [0, -4], [0, -5], [0, -6], [0, -7], [0, -8], [0, -9], # 0-8  차,졸,포,사,왕\n",
@@ -101,41 +91,41 @@
         "       [1, -2], [2, -1], [2, 1], [1, 2], [-1, 2], [-2, 1], [-2, -1], [-1, -2],          # 34-41  마\n",
         "       [2, -3], [3, -2], [3, 2], [2, 3], [-2, 3], [-3, 2], [-3, -2], [-2, -3],          # 42-49  상\n",
         "       [1, -1], [2, -2], [1, 1], [2, 2], [-1, 1], [-2, 2], [-1, -1], [-2, -2]]          # 50-57 궁성안의 대각선 움직임\n"
-      ],
-      "metadata": {
-        "id": "shRQ36u3t9ee"
-      },
-      "execution_count": 29,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {
+        "id": "aWMndOBBYEQA"
+      },
+      "outputs": [],
       "source": [
         "# 말의 이동 도착 위치 및 이동 시작 위치를 행동으로 변환                                                                        \n",
         "def position_to_action(self, position, direction):\n",
         "  return position * 58 + direction"
-      ],
-      "metadata": {
-        "id": "aWMndOBBYEQA"
-      },
-      "execution_count": 30,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {
+        "id": "Xrfap_MRYa-w"
+      },
+      "outputs": [],
       "source": [
         "# 행동을 말의 이동 도착 위치 및 이동 시작 위치로 변환\n",
         "def action_to_position(self, action):\n",
         "    return (int(action / 58), action % 58)"
-      ],
-      "metadata": {
-        "id": "Xrfap_MRYa-w"
-      },
-      "execution_count": 31,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {
+        "id": "j3haQCTChxim"
+      },
+      "outputs": [],
       "source": [
         "# 가능한 행동 함수\n",
         "def legal_actions(self):\n",
@@ -144,15 +134,15 @@
         "    if self.pieces[p] != 0:\n",
         "      actions.extend(self.legal_actions_pos(p))\n",
         "  return actions "
-      ],
-      "metadata": {
-        "id": "j3haQCTChxim"
-      },
-      "execution_count": 32,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {
+        "id": "17PG1aDIj_xu"
+      },
+      "outputs": [],
       "source": [
         "# 각 기물들의 모든 이동가능한 방향 함수\n",
         "def legal_actions_pos(self, position_src):\n",
@@ -189,15 +179,15 @@
         "  elif piece_type == 7: #왕\n",
         "    directions = [0, 9, 17, 26, 50, 52, 54, 56]\n",
         "    return illegal_actions(directions, position_src)"
-      ],
-      "metadata": {
-        "id": "17PG1aDIj_xu"
-      },
-      "execution_count": 33,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "id": "qnoxIFYP0Uva"
+      },
+      "outputs": [],
       "source": [
         "# 행동할 수 없는 수 걸러주는 함수\n",
         "def illegal_actions(self, directions, position_src): \n",
@@ -481,33 +471,25 @@
         "          actions.append(self.position_to_action(p, direction))\n",
         "  return actions\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "qnoxIFYP0Uva"
-      },
-      "execution_count": 34,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {
+        "id": "j9Hh-xH3NSeo"
+      },
+      "outputs": [],
       "source": [
         "# a = 0\n",
         "# b = 0\n",
         "# if a and b == 0:\n",
         "#   print('a')"
-      ],
-      "metadata": {
-        "id": "j9Hh-xH3NSeo"
-      },
-      "execution_count": 35,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# a_test = [1,2,3,4,5,6,7,8,9,10]\n",
-        "# a_test[(2*2)+1]"
-      ],
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -515,29 +497,26 @@
         "id": "U1EnQ-I2sSgh",
         "outputId": "98c93b5d-06c9-43f1-dedf-df2cc80e51ec"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "6"
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# a_test = [1,2,3,4,5,6,7,8,9,10]\n",
+        "# a_test[(2*2)+1]"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# def a_test(a):\n",
-        "#   a = a\n",
-        "#   return print(a)\n",
-        "\n",
-        "# a_test(7)"
-      ],
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -545,19 +524,42 @@
         "id": "qvHwKhsMuOkR",
         "outputId": "3145411e-a17f-42f7-f860-6ff686797bad"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "7\n"
           ]
         }
+      ],
+      "source": [
+        "# def a_test(a):\n",
+        "#   a = a\n",
+        "#   return print(a)\n",
+        "\n",
+        "# a_test(7)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pevZiVWo9d2Z",
+        "outputId": "2376b1e7-490e-4272-d49c-846d7adefb92"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]\n"
+          ]
+        }
+      ],
       "source": [
         "# # 방향 정수 구현\n",
         "# # 차 : 1, 졸: 2, 마: 3, 포: 4, 사: 5, 상: 6, 왕: 7 \n",
@@ -592,31 +594,11 @@
         "\n",
         "# print([i for i in range(34)])\n",
         "  "
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pevZiVWo9d2Z",
-        "outputId": "2376b1e7-490e-4272-d49c-846d7adefb92"
-      },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# a_test = {}\n",
-        "# a_test[1].append([1,1])"
-      ],
+      "execution_count": 57,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -625,12 +607,11 @@
         "id": "IAXCzZzvNUon",
         "outputId": "bf81fd8b-2e6d-47f9-9fcc-fe075c078ddf"
       },
-      "execution_count": 57,
       "outputs": [
         {
-          "output_type": "error",
           "ename": "KeyError",
           "evalue": "ignored",
+          "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
@@ -638,10 +619,31 @@
             "\u001b[0;31mKeyError\u001b[0m: 0"
           ]
         }
+      ],
+      "source": [
+        "# a_test = {}\n",
+        "# a_test[1].append([1,1])"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mZo-x11oOTMv",
+        "outputId": "76da797d-8fb7-4c7c-bc8b-f197303b6145"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "[[[0, -1], [0, -2], [0, -3], [0, -4], [0, -5], [0, -6], [0, -7], [0, -8], [0, -9]], [[0, 1], [0, 2], [0, 3], [0, 4], [0, 5], [0, 6], [0, 7], [0, 8], [0, 9]], [[-1, 0], [-2, 0], [-3, 0], [-4, 0], [-5, 0], [-6, 0], [-7, 0], [-8, 0]], [[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0]]]\n"
+          ]
+        }
+      ],
       "source": [
         "# cha_dir = []\n",
         "# list_num = []\n",
@@ -666,33 +668,11 @@
         "# cha_dir.append(list_num)  \n",
         "\n",
         "# print(cha_dir)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mZo-x11oOTMv",
-        "outputId": "76da797d-8fb7-4c7c-bc8b-f197303b6145"
-      },
-      "execution_count": 69,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "[[[0, -1], [0, -2], [0, -3], [0, -4], [0, -5], [0, -6], [0, -7], [0, -8], [0, -9]], [[0, 1], [0, 2], [0, 3], [0, 4], [0, 5], [0, 6], [0, 7], [0, 8], [0, 9]], [[-1, 0], [-2, 0], [-3, 0], [-4, 0], [-5, 0], [-6, 0], [-7, 0], [-8, 0]], [[1, 0], [2, 0], [3, 0], [4, 0], [5, 0], [6, 0], [7, 0], [8, 0]]]\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# a =[]\n",
-        "# a_test = a.append\n",
-        "# a_test((1,2))\n",
-        "# a"
-      ],
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -700,28 +680,55 @@
         "id": "zPo-jl6aW5mF",
         "outputId": "7968e50a-0c9c-4443-f93d-0861880d5637"
       },
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "[(1, 2)]"
             ]
           },
+          "execution_count": 7,
           "metadata": {},
-          "execution_count": 7
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# a =[]\n",
+        "# a_test = a.append\n",
+        "# a_test((1,2))\n",
+        "# a"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "-fbx-3Slx3uf"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3.10.7 64-bit (microsoft store)",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.7"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "041601fc2873d1ffdec82bbdb9143d04bf9ea8df2d714ea7fa0dca5b1eabf1aa"
+      }
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
